--- a/configure.in
+++ b/configure.in
@@ -119,11 +119,11 @@ NEDC="nedc"
 MAKEDEPEND="makedepend -Y"
 
 case "$CXX" in
-   "c++") # linux machine
-      CXXLIB=stdc++
-   ;;
    "cxx") # Tru64 machine
       CXXLIB=cxx
+   ;;
+   *) # GNU C++ ?
+      CXXLIB=stdc++
    ;;
 esac
 
