--- a/configure.in
+++ b/configure.in
@@ -387,6 +387,7 @@ AC_SUBST(OMNETPP_BITMAP_PATH)
 
 AC_SUBST(OMNETPP_SRC_DIR)
 AC_SUBST(OMNETPP_SAMPLES_DIR)
+AC_SUBST(OMNETPP_TUTORIAL_DIR)
 dnl AC_SUBST(OMNETPP_MODELS_DIR)
 
 AC_SUBST(YACC)
