--- a/Makefile.in
+++ b/Makefile.in
@@ -22,7 +22,7 @@ OMNETPP_TUTORIAL_DIR =  @OMNETPP_TUTORIAL_DIR@
 
 all: check-env components
 
-components: libs progs samples
+components: libs progs samples tutorial
 
 
 #=====================================================================
@@ -110,6 +110,7 @@ token:
 demo:
 	cd $(OMNETPP_SAMPLES_DIR)/demo && $(MAKE)
 
+.PHONY: tutorial
 tutorial:
 	cd $(OMNETPP_TUTORIAL_DIR)/queues && $(MAKE)
 
